test/visibility/except/operatorsExceptions/exceptNot.good
exceptNot.chpl:5: In function 'main':
exceptNot.chpl:7: error: unresolved call '!(owned Foo2)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: this candidate did not match: !(a: bool)
exceptNot.chpl:7: note: because actual argument #1 with type 'owned Foo2'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: is passed to formal 'a: bool'
exceptNot.chpl:7: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   !(a: int(8))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   !(a: int(16))
note: and 18 other candidates, use --print-all-candidates to see them
